// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render <Observer /> render outside view 1`] = `
<Observer
  threshold={0}
  triggerOnce={false}
>
  <div>
    Inview: 
    false
  </div>
</Observer>
`;

exports[`Should render <Observer /> render when in view 1`] = `
<Observer
  threshold={0}
  triggerOnce={false}
>
  <div>
    Inview: 
    true
  </div>
</Observer>
`;
